# openbotrisk

./: .gitignore  .pre-commit-config.yaml  EVIDENCE-REVIEW.md  GOVERNANCE.md  LICENSE  PROJECT.md  README.md  REPO.md  TODO.md  _quarto.yml  environment.yml  index.qmd  pyproject.toml  skills-lock.json  styles.css
.github/workflows/: ci.yml  deploy.yml
docs/prompts/: eda-agent-prompt.md
experiments/identifier-synchrony/: README.md  generate_data.py  method1_identifier_graph.py  method2_bucket_sweep.py  method2_synchrony.py
notebooks/eda/: ctu-13.ipynb  ieee-fraud-detection.ipynb  talkingdata-adtracking.ipynb  web-robot-sessions.ipynb
site/assets/: commercial-automation-cost-stack-2026-scraping-proxies-captcha-sms.md
site/background/: README.md  adversary-model.qmd  ai-agent-shift.qmd  background-status.md  background.css  booking-style-system.qmd  commercial-automation-cost-stack-2026-scraping-proxies-captcha-sms.md  commercial-defender-landscape.qmd  economics-of-automation.qmd  index-long-draft.qmd  index.qmd  threat-model.qmd
site/boundaries/: index.qmd
site/foundations/: 01-ip-addresses-and-network-origin.md  02-cookies-and-sessions.md  03-http-headers-user-agent-and-client-hints.md  04-browser-and-device-fingerprinting.md  05-proxies-vpns-nat-and-shared-addresses.md  06-how-websites-recognise-visitors.md  07-how-this-becomes-bot-detection.md  08-automation-techniques-from-scripts-to-browser-agents.md  (+2 more)
tools/: register_entry_html.py
working/: dataset-assessment.md  decisions.md  evidence-targets.md  pdf-rename-manifest.csv  reading-register.md
(+163 files in other folders)
