[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbotrisk"
version = "0.1.0"
description = "Analysis and utilities supporting the openbotrisk methodology investigations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["D", "N"]

[tool.ruff.lint.isort]
known-first-party = ["openbotrisk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
